--- a/index.html
+++ b/index.html
@@ -168,6 +168,26 @@
           </main>
         </div>
       </div>
+  <script id="template-article-link" type="text/x-handlebars-template">
+    <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+  </script>
+  <script id="template-article-tag" type="text/x-handlebars-template">
+    <li><a href="#tag-{{ tags }}"><span>{{ tags }}</span></a></li>
+  </script>
+  <script id="template-article-author" type="text/x-handlebars-template">
+    <a href="#author-{{ author }}"><span>by {{ author }}</span></a>
+  </script>
+  <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+    {{#each tags}}
+    <li><a href="#tag-{{ tag }}" class="tag-size-{{ className }}"><span>{{ tag }}</span></a></li>
+    {{/each}}
+  </script> 
+  <script id="template-author-list" type="text/x-handlebars-template">
+    {{#each authors}}
+    <li><a href="#author-{{ author }}"><span>{{ author }}</span></a></li>
+    {{/each}}
+  </script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
